feat: serve api and db through docker